Rule vocabulary validation against the ontology registry (Q3, validator layer)
RuleVocabularyValidator extracts ontology predicate literals from rule
precondition/postcondition scripts and filter strings (hasEdge, notHasEdge,
hasIncomingEdge, hasAnyEdges, hasAllEdges, relatedIds) and validates them
against an OntologyRegistry, failing fast with rule + helper + predicate
context. Closes the silent-rename gap where ontology property renames broke
rule scripts undetected at load time.

Enforcement wiring at policy load (CDI hook from YamlPolicyLoader/PolicyRepo
consumers) and functional-domain/action validation tracked as follow-up in
helixor-ontologies UNIFIED_ONTOLOGY_DESIGN.md (Q3).

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>